# STR-2025

./: .gitignore  README.md
back/: app.py  requirements.txt
backend/: .env  Dockerfile  app.py  docker-compose.yml
backend/db/: init.sql
principal/: CMakeLists.txt
principal/src/: main.cpp  shared_data.h
principal/src/threads/: barrera.cpp  barrera.h  camera.cpp  camera.h  communicator.cpp  communicator.h  sensor.h  supervisor.cpp  supervisor.h
str-project/: CMakeLists.txt
str-project/src/: main.cpp
str-project/src/threads/: barrera.cpp  barrera.h  camera.cpp  camera.h  communicator.cpp  communicator.h  sensor.cpp  sensor.h  supervisor.cpp  supervisor.h
